P5 E-learning/force-app/main/default/objects/Unidad__c/Unidad__c.object-meta.xml
<CustomObject>
    <label>Unidad</label>
    <nameField>
        <label>Unidad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>