P5 E-learning/force-app/main/default/objects/Unidad__c/fields/Contenido__c.field-meta.xml
<CustomField>
    <fullName>Contenido__c</fullName>
    <description>en que vamos a hacer foco en esta unidad</description>
    <inlineHelpText>en que vamos a hacer foco en esta unidad</inlineHelpText>
    <label>Contenido</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>