P5 E-learning/force-app/main/default/objects/Unidad__c/fields/Tiempo__c.field-meta.xml
<CustomField>
    <fullName>Tiempo__c</fullName>
    <description>Tiempo en Minutos</description>
    <inlineHelpText>Tiemp en Minutos</inlineHelpText>
    <label>Tiempo</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>