P5 E-learning/force-app/main/default/objects/Unidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Modulo__c</columns>
    <columns>NAME</columns>
    <columns>Puntos__c</columns>
    <columns>Tiempo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>